k8s-dev/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: news-demo-dev
  namespace: news-demo-dev
  labels:
    app: news-demo-dev
spec:
  selector:
    app: news-demo-dev
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
