k8s-dev/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-demo-dev
  namespace: news-demo-dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: news-demo-dev
                port:
                  number: 3000
